--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -95,8 +95,8 @@
                 h2 {
                     color: #fff;
                     padding: .5rem .5rem 0;
-                    margin: .5rem auto;
-                    font-size: 1.5rem;
+                    margin: .5rem auto 0;
+                    font-size: 1.25rem;
                     width: 70%;
                     font-weight: 600;
                     position: relative;
