--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -20,11 +20,12 @@
             // border: 1px solid $overlay-blue-dark;
             padding: 5vh 0;
             width: 100%;
-            border-radius: 5px;
+            border-radius: .5rem;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            background: hsl(211, 16%, 97%);
+            // background: hsl(211, 16%, 97%);
+            background: #fafafa;
             // background: linear-gradient(180deg, hsl(211, 16%, 95%) 0%, hsl(211, 16%, 95%) 100%);
             // ITEM BACKGROUND COLORS
 
