--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -8,7 +8,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        padding: 5vh 2px;
+        // padding: 5vh 2px;
         @media (min-width: 1024px) {
             padding: 5vh 5vw;
             
@@ -38,7 +38,7 @@
             height: auto;
             display: flex;
             flex-direction: column;
-            margin: 5vh auto;
+            margin: 5vh auto 0;
             padding: 5vh 1em;
             border-radius: 0;
             // border: 1px solid $span-gold;
