--- a/css/style.css
+++ b/css/style.css
@@ -935,9 +935,29 @@ hamburger
 #home {
   padding: 0;
   min-height: 100vh;
+  background: linear-gradient(0deg, red 20%, #29323c 40%);
+  background: linear-gradient(#15191e 20%, #29323c 60%);
+  background: #15191e;
+  background: #000;
   position: relative;
   z-index: 1;
   overflow: hidden;
+}
+@media (max-width: 1024px) {
+  #home::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg");
+    background-position: center left;
+    background-repeat: no-repeat;
+    background-position: 15% bottom;
+    background-size: contain;
+  }
 }
 @media (min-width: 1024px) {
   #home {
@@ -945,7 +965,6 @@ hamburger
     background-position: center left;
     background-position: 10% 50%;
     background-attachment: fixed;
-    animation: desktopIntro 8s linear 4s;
   }
   #home::after {
     position: absolute;
@@ -999,7 +1018,6 @@ hamburger
   object-fit: cover;
   z-index: -1;
   object-position: 15%;
-  animation: intro 4s ease-out 6.5s;
 }
 @keyframes intro {
   0% {
@@ -1036,12 +1054,6 @@ hamburger
   text-align: left;
   margin: 0.5rem 0 0;
   line-height: 1.3;
-  opacity: 0;
-  animation: hero-span 5s ease-in-out;
-  animation-fill-mode: forwards;
-  animation-delay: calc(9s + .5s * var(--s));
-  transition: 1s;
-  transform-style: preserve-3d;
   /* HERO H1 INTRO ANIMATION */
 }
 @media (min-width: 768px) {
@@ -1063,10 +1075,7 @@ hamburger
   font-size: 1.25rem;
   position: relative;
   color: #ddd;
-  opacity: 0;
-  animation: aka 5s ease alternate;
-  animation-delay: 12s;
-  animation-fill-mode: forwards;
+  margin-top: 0.5rem;
 }
 @keyframes aka {
   10% {
@@ -1079,6 +1088,7 @@ hamburger
 }
 #home .hero #cta-header {
   margin: 7vh 0 1rem;
+  margin: 2rem 0 0;
   background: #dc143c;
   position: relative;
   display: block;
@@ -1089,20 +1099,10 @@ hamburger
   border-radius: 1rem;
   border: none;
   outline: none;
-  opacity: 0;
-  transform: translateX(-10vw);
-  transform-style: preserve-3d;
-  animation: show-cta 3s ease-in-out 13s;
-  animation-fill-mode: forwards;
   transition: 0.3s linear;
   cursor: pointer;
   -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
   z-index: 2;
-}
-@media (max-width: 389px) {
-  #home .hero #cta-header {
-    margin: 12vh 0;
-  }
 }
 @media (min-width: 768px) {
   #home .hero #cta-header {
@@ -1202,12 +1202,10 @@ hamburger
 }
 #home .hero .slogan {
   position: absolute;
-  bottom: 15vh;
+  bottom: 30vh;
   left: 0;
   padding: 0 5vw;
   width: 100%;
-  opacity: 0;
-  animation: slogan 5s linear 14s forwards;
 }
 #home .hero .slogan p {
   color: #ffff;
