--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -2,32 +2,41 @@
 #home {
     padding: 0;
     min-height: 100vh;
-    // background-color: $overlay-blue-dark;
+    background: linear-gradient(0deg, red 20%, $overlay-blue-dark 40%);
+    background: linear-gradient( $overlay-blue-darkest 20%, $overlay-blue-dark 60%);
+    background: $overlay-blue-darkest;
+    background: #000;
     position: relative;
     z-index: 1;
     overflow: hidden;
-    // @media (max-width: 1024px){
-    // background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg');
-    //     background-position: 15%;
-    //     background-size: cover;
-    //     &::after {
-    //         content: '';
-    //         position: absolute;
-    //         top: 0;
-    //         left: 0;
-    //         width: 100%;
-    //         height: 100%;
-    //         background: linear-gradient(120deg, rgba(0, 0, 0, .5) 70%, transparent);
-    //         z-index: -1;
-    //     }
-    // }
+    // MOBILE HERO IMG
+    @media (max-width: 1024px){
+        
+        &::after {
+                position: absolute;
+                content: '';
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: -1;
+                background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg');
+                background-position: center left;
+                background-repeat: no-repeat;
+                background-position: 15% bottom;
+                background-size: contain;
+                // mix-blend-mode: overlay;
+                // opacity: .9;
+                // background: radial-gradient(transparent, #000);
+        }
+    }
     // DESKTOP HERO IMAGE
     @media (min-width: 1024px){
         background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg');
         background-position: center left;
         background-position: 10% 50%;
         background-attachment: fixed;
-        animation: desktopIntro 8s linear 4s ;
+        // animation: desktopIntro 8s linear 4s ;
         &::after {
                 position: absolute;
                 content: '';
@@ -50,7 +59,6 @@
         }
     }
     
-    
     .hero {
         overflow: hidden;
         position: relative;
@@ -64,8 +72,6 @@
             // border: 2px solid red;
             position: absolute;
             position: relative;
-            // top: 0;
-            // right: 0;
             width: 100vw;
             height: 100vh;
             overflow: hidden;
@@ -88,7 +94,7 @@
                 object-fit: cover;
                 z-index: -1;
                 object-position: 15%;
-                animation: intro 4s ease-out 6.5s;
+                // animation: intro 4s ease-out 6.5s;
                 @keyframes intro {
                     0% {
                         // transform: scale(1.5);
@@ -117,19 +123,11 @@
 
             @media (min-width: 600px) {
                 top: 12vh;
-                // max-width: 50%;
-                // display: flex;
-                // flex-direction: column;
-                // align-items: center;
-                // border: 2px solid red;
-                // left: 50%;
-                // transform: translateX(-50%);
             }
 
             h1 {
                 font-size: 2.5rem;
                 line-height: 1.4;
-                // margin-bottom: .5rem;
                 display: block;
                 width: fit-content;
                 color: $text-white-e;
@@ -144,12 +142,12 @@
                     // font-size: 2rem;
                     margin: .5rem 0 0;
                     line-height: 1.3;
-                    opacity: 0;
-                    animation: hero-span 5s ease-in-out;
-                    animation-fill-mode: forwards;
-                    animation-delay: calc(9s + .5s * var(--s));
-                    transition: 1s;
-                    transform-style: preserve-3d;
+                    // opacity: 0;
+                    // animation: hero-span 5s ease-in-out;
+                    // animation-fill-mode: forwards;
+                    // animation-delay: calc(9s + .5s * var(--s));
+                    // transition: 1s;
+                    // transform-style: preserve-3d;
                     @media (min-width: 768px) {
                         font-size: 3rem;
                     }
@@ -172,10 +170,11 @@
                         font-size: 1.25rem;
                         position: relative;
                         color: #ddd;
-                        opacity: 0;
-                        animation: aka 5s ease alternate;
-                        animation-delay: 12s;
-                        animation-fill-mode: forwards;
+                        margin-top: .5rem;
+                        // opacity: 0;
+                        // animation: aka 5s ease alternate;
+                        // animation-delay: 12s;
+                        // animation-fill-mode: forwards;
                         // transform: scale(0.7);
                     }
 
@@ -196,8 +195,9 @@
         // welcome section button & shadow
         #cta-header {
             margin: 7vh 0 1rem;
+            margin: 2rem 0 0;
             @media (max-width: 389px){
-                margin: 12vh 0;
+                // margin: 12vh 0;
             }
             @media (min-width: 768px) {
                 font-size: 1.5em;
@@ -215,11 +215,11 @@
             border-radius: 1rem;
             border: none;
             outline: none;
-            opacity: 0;
-            transform: translateX(-10vw);
-            transform-style: preserve-3d;
-            animation: show-cta 3s ease-in-out 13s;
-            animation-fill-mode: forwards;
+            // opacity: 0;
+            // transform: translateX(-10vw);
+            // transform-style: preserve-3d;
+            // animation: show-cta 3s ease-in-out 13s;
+            // animation-fill-mode: forwards;
             transition: .3s linear;
             cursor: pointer;
             -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
@@ -349,12 +349,12 @@
         .slogan {
             // border: 1px solid #fff;
             position: absolute;
-            bottom: 15vh;
+            bottom: 30vh;
             left: 0;
             padding: 0 5vw;
             width: 100%;
-            opacity: 0;
-            animation: slogan 5s linear 14s forwards;
+            // opacity: 0;
+            // animation: slogan 5s linear 14s forwards;
 
             p {
                 color: #ffff;
