--- a/css/style.css
+++ b/css/style.css
@@ -528,12 +528,12 @@ hamburger
 }
 #header.header-io {
   background-color: #29323c;
-  transition: background-color 0.5s;
+  transition: background-color 0.25s;
 }
 @media (min-width: 1024px) {
   #header.header-io {
     height: 8vh;
-    transition: 0.5s;
+    transition: 0.25s;
     border: none;
   }
   #header.header-io #navbar .nav-list .contact-links {
@@ -954,8 +954,14 @@ hamburger
     z-index: -1;
     background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg");
     background-repeat: no-repeat;
-    background-position: 50% bottom;
+    background-position: bottom;
+    background-size: 70%;
+  }
+}
+@media (max-width: 1024px) and (max-width: 450px) {
+  #home::after {
     background-size: 150%;
+    background-position: 50% bottom;
   }
 }
 @media (min-width: 1024px) {
@@ -1028,7 +1034,6 @@ hamburger
   padding: 5vh 0;
   border-radius: 5px;
   position: absolute;
-  width: max-content;
   text-transform: capitalize;
   top: 6vh;
   left: 5vw;
@@ -1217,9 +1222,7 @@ hamburger
 }
 @media (min-width: 1024px) {
   #home .hero .slogan {
-    bottom: 10vh;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 15vh;
   }
   #home .hero .slogan p {
     text-align: center;
