--- a/css/style.css
+++ b/css/style.css
@@ -960,7 +960,8 @@ hamburger
 }
 @media (max-width: 1024px) and (max-width: 450px) {
   #home::after {
-    background-size: 150%;
+    background-size: 100%;
+    background-size: contain;
     background-position: 50% bottom;
   }
 }
