--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -26,7 +26,8 @@
                 background-position: bottom;
                 background-size: 70%;
                 @media (max-width: 450px){
-                    background-size: 150%;
+                    background-size: 100%;
+                    background-size: contain;
                 background-position: 50% bottom;
                 }
                 // mix-blend-mode: overlay;
