--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -28,7 +28,8 @@
                 @media (max-width: 450px){
                     background-size: 90%;
                     background-size: contain;
-                background-position: 50% bottom;
+                    background-size: contain;
+                background-position: 15% bottom;
                 }
                 // mix-blend-mode: overlay;
                 // opacity: .9;
