--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -4,8 +4,8 @@
     min-height: 100vh;
     background: linear-gradient(0deg, red 20%, $overlay-blue-dark 40%);
     background: linear-gradient( $overlay-blue-darkest 20%, $overlay-blue-dark 60%);
-    background: $overlay-blue-darkest;
-    background: #000;
+    // background: $overlay-blue-darkest;
+    // background: #000;
     position: relative;
     z-index: 1;
     overflow: hidden;
@@ -28,8 +28,11 @@
                 @media (max-width: 450px){
                     background-size: 90%;
                     background-size: contain;
-                    background-size: contain;
+                    background-size: cover;
                 background-position: 15% bottom;
+                mix-blend-mode: overlay;
+                opacity: 1;
+                z-index: -1;
                 }
                 // mix-blend-mode: overlay;
                 // opacity: .9;
@@ -124,7 +127,7 @@
             // overflow-y: hidden;
             // width: max-content;
             text-transform: capitalize;
-            top: 6vh;
+            top: 7vh;
             left: 5vw;
             
             @media (min-width: 600px) {
@@ -133,7 +136,6 @@
 
             h1 {
                 font-size: 2.5rem;
-                line-height: 1.4;
                 display: block;
                 width: fit-content;
                 color: $text-white-e;
@@ -146,8 +148,8 @@
                     color: $text-light;
                     text-align: left;
                     // font-size: 2rem;
-                    margin: .5rem 0 0;
-                    line-height: 1.3;
+                    // margin: .5rem 0 0;
+                    line-height: 1.5;
                     // opacity: 0;
                     // animation: hero-span 5s ease-in-out;
                     // animation-fill-mode: forwards;
@@ -201,8 +203,8 @@
         // welcome section button & shadow
         #cta-header {
             margin: 1rem 0 0;
-            @media (max-width: 389px){
-                // margin: 12vh 0;
+            @media (max-width: 400px){
+                // margin: 10vh 0;
             }
             @media (min-width: 768px) {
                 font-size: 1.5em;
@@ -353,9 +355,9 @@
         // SLOGAN 
         .slogan {
             // border: 1px solid #fff;
-            position: absolute;
-            top: 7vh;
-            left: 5vw;
+            // position: absolute;
+            // top: 10vh;
+            // left: 5vw;
             // padding: 0 5vw;
             width: 100%;
             // opacity: 0;
@@ -381,6 +383,7 @@
                 p {
                     text-align: center;
                     text-align: left;
+                    font-size: 1.15rem;
                 }
             }
 
