--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -3,8 +3,9 @@
     padding: 0;
     min-height: 100vh;
     background: linear-gradient(0deg, red 20%, $overlay-blue-dark 40%);
-    background: linear-gradient( $overlay-blue-darkest 20%, $overlay-blue-dark 60%);
-    // background: $overlay-blue-darkest;
+    background: linear-gradient( $overlay-blue-darkest 70%, $overlay-blue-dark 30%);
+    background: $overlay-blue-darkest;
+    background: linear-gradient( $overlay-blue-darkest 30%, #000 60%);
     // background: #000;
     position: relative;
     z-index: 1;
@@ -27,11 +28,11 @@
                 background-size: 70%;
                 @media (max-width: 450px){
                     background-size: 90%;
-                    background-size: contain;
                     background-size: cover;
+                    background-size: contain;
                 background-position: 15% bottom;
-                mix-blend-mode: overlay;
-                opacity: 1;
+                // mix-blend-mode: overlay;
+                // opacity: .5;
                 z-index: -1;
                 }
                 // mix-blend-mode: overlay;
