--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -28,11 +28,11 @@
                 background-size: 70%;
                 @media (max-width: 450px){
                     background-size: 90%;
-                    background-size: cover;
                     background-size: contain;
+                    background-size: cover;
                 background-position: 15% bottom;
-                // mix-blend-mode: overlay;
-                // opacity: .5;
+                mix-blend-mode: overlay;
+                opacity: .9;
                 z-index: -1;
                 }
                 // mix-blend-mode: overlay;
@@ -205,7 +205,7 @@
         #cta-header {
             margin: 1rem 0 0;
             @media (max-width: 400px){
-                // margin: 10vh 0;
+                margin: 10vh 0 0;
             }
             @media (min-width: 768px) {
                 font-size: 1.5em;
