--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -15,7 +15,7 @@ hamburger
     display: inline-block;
     border-radius: 50%;
     position: relative;
-    // background: #29323c;
+    background: $overlay-dark;
     display: flex;
     align-items: center;
     justify-content: center;
