--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ hamburger
   display: inline-block;
   border-radius: 50%;
   position: relative;
+  background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -934,10 +935,12 @@ hamburger
 #home {
   padding: 0;
   min-height: 100vh;
+  width: 100%;
   background: linear-gradient(0deg, red 20%, #29323c 40%);
   background: linear-gradient(#15191e 70%, #29323c 30%);
   background: #15191e;
   background: linear-gradient(#15191e 30%, #000 60%);
+  background: linear-gradient(90deg, #0009 50%, transparent 80%);
   position: relative;
   z-index: 1;
   overflow: hidden;
@@ -953,18 +956,16 @@ hamburger
     z-index: -1;
     background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg");
     background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: 70%;
   }
 }
-@media (max-width: 1024px) and (max-width: 450px) {
+@media (max-width: 1024px) and (max-width: 1024px) {
   #home::after {
     background-size: 90%;
     background-size: contain;
     background-size: cover;
     background-position: 15% bottom;
     mix-blend-mode: overlay;
-    opacity: 0.9;
+    opacity: 1;
     z-index: -1;
   }
 }
