--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -2,10 +2,13 @@
 #home {
     padding: 0;
     min-height: 100vh;
+    width: 100%;
     background: linear-gradient(0deg, red 20%, $overlay-blue-dark 40%);
     background: linear-gradient( $overlay-blue-darkest 70%, $overlay-blue-dark 30%);
     background: $overlay-blue-darkest;
     background: linear-gradient( $overlay-blue-darkest 30%, #000 60%);
+    // background: linear-gradient( 90deg, #000 50%, #0000ff 80%);
+    background: linear-gradient( 90deg, #0009 50%, transparent 80%);
     // background: #000;
     position: relative;
     z-index: 1;
@@ -24,15 +27,15 @@
                 background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg');
                 background-repeat: no-repeat;
                 // background-position: center left;
-                background-position: bottom;
-                background-size: 70%;
-                @media (max-width: 450px){
+                // background-position: bottom;
+                // background-size: 70%;
+                @media (max-width: 1024px){
                     background-size: 90%;
                     background-size: contain;
                     background-size: cover;
                 background-position: 15% bottom;
                 mix-blend-mode: overlay;
-                opacity: .9;
+                opacity: 1;
                 z-index: -1;
                 }
                 // mix-blend-mode: overlay;
