--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -17,7 +17,7 @@
 
         }
         .work-item {
-            // border: 1px solid $overlay-blue-dark;
+            border: 1px solid #0002;
             padding: 5vh 0;
             width: 100%;
             border-radius: .5rem;
@@ -25,7 +25,7 @@
             flex-direction: column;
             justify-content: space-between;
             // background: hsl(211, 16%, 97%);
-            background: #fafafa;
+            // background: #fafafa;
             // background: linear-gradient(180deg, hsl(211, 16%, 95%) 0%, hsl(211, 16%, 95%) 100%);
             // ITEM BACKGROUND COLORS
 
