--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -383,7 +383,7 @@ hamburger
 // BOTTOM NAV
 .bottom-nav {
     @media (min-width: 768px){
-        display: none;
+        // display: none;
     }
     position: fixed;
     bottom: 0;
