--- a/css/style.css
+++ b/css/style.css
@@ -337,11 +337,6 @@ hamburger
   transform: translateY(15vh);
   transition: 1s;
 }
-@media (min-width: 768px) {
-  .bottom-nav {
-    display: none;
-  }
-}
 .bottom-nav .link-item {
   width: 100%;
   height: 100%;
@@ -2477,28 +2472,28 @@ hamburger
   margin-left: 0.5em;
 }
 
-#work {
+.work {
   min-height: 100vh;
   padding: 5vh 1rem;
 }
 @media (min-width: 768px) {
-  #work {
+  .work {
     padding: 5vh 5vw;
   }
 }
-#work .work-items {
+.work .work-items {
   margin-top: 15vh;
   display: grid;
   grid-template-columns: 1fr;
   gap: 10vh;
 }
 @media (min-width: 768px) {
-  #work .work-items {
+  .work .work-items {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1rem;
   }
 }
-#work .work-items .work-item {
+.work .work-items .work-item {
   border: 1px solid #0002;
   padding: 5vh 0;
   width: 100%;
@@ -2507,17 +2502,17 @@ hamburger
   flex-direction: column;
   justify-content: space-between;
 }
-#work .work-items .work-item[data-scroll] {
+.work .work-items .work-item[data-scroll] {
   transform: scale(1) translateY(10vh);
 }
-#work .work-items .work-item[data-scroll=in] {
+.work .work-items .work-item[data-scroll=in] {
   transition: 1.5s;
   transform: scale(1) translateY(0vh);
 }
-#work .work-items .work-item .work-title {
+.work .work-items .work-item .work-title {
   text-align: center;
 }
-#work .work-items .work-item .work-title h2 {
+.work .work-items .work-item .work-title h2 {
   text-transform: capitalize;
   font-family: "Kanit", sans-serif;
   font-weight: 500;
@@ -2526,26 +2521,26 @@ hamburger
   margin-bottom: 0.5rem;
   line-height: 1.3;
 }
-#work .work-items .work-item .work-title h2 br {
+.work .work-items .work-item .work-title h2 br {
   display: none;
 }
 @media (min-width: 768px) {
-  #work .work-items .work-item .work-title h2 br {
+  .work .work-items .work-item .work-title h2 br {
     display: none;
   }
 }
-#work .work-items .work-item .work-title p {
+.work .work-items .work-item .work-title p {
   color: #485563;
   font-size: 1rem;
 }
-#work .work-items .work-item .work-title p a {
+.work .work-items .work-item .work-title p a {
   color: #485563;
   transition: 0.25s;
 }
-#work .work-items .work-item .work-title p a:hover {
+.work .work-items .work-item .work-title p a:hover {
   color: #000;
 }
-#work .work-items .work-item figure {
+.work .work-items .work-item figure {
   margin: 5vh auto;
   width: 65%;
   width: 16rem;
@@ -2558,12 +2553,12 @@ hamburger
   border-radius: 0.25rem;
 }
 @media (min-width: 768px) {
-  #work .work-items .work-item figure {
+  .work .work-items .work-item figure {
     width: 13rem;
     height: 13rem;
   }
 }
-#work .work-items .work-item figure img {
+.work .work-items .work-item figure img {
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
@@ -2571,7 +2566,7 @@ hamburger
   object-fit: cover;
   transition: 0.3s;
 }
-#work .work-items .work-item .view-site-btn {
+.work .work-items .work-item .view-site-btn {
   border: none;
   outline: none;
   background: #dc143c8c;
@@ -2589,7 +2584,7 @@ hamburger
   position: relative;
   isolation: isolate;
 }
-#work .work-items .work-item .view-site-btn::before, #work .work-items .work-item .view-site-btn::after {
+.work .work-items .work-item .view-site-btn::before, .work .work-items .work-item .view-site-btn::after {
   position: absolute;
   content: "";
   top: 0;
@@ -2600,43 +2595,43 @@ hamburger
   transition: 0.2s;
   z-index: -1;
 }
-#work .work-items .work-item .view-site-btn::before {
+.work .work-items .work-item .view-site-btn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
-#work .work-items .work-item .view-site-btn::after {
+.work .work-items .work-item .view-site-btn::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
   opacity: 0;
 }
 @media (min-width: 820px) {
-  #work .work-items .work-item .view-site-btn {
+  .work .work-items .work-item .view-site-btn {
     width: 13rem;
   }
-  #work .work-items .work-item .view-site-btn:hover {
+  .work .work-items .work-item .view-site-btn:hover {
     transform: scale(0.95);
     letter-spacing: normal;
   }
-  #work .work-items .work-item .view-site-btn:hover::before {
+  .work .work-items .work-item .view-site-btn:hover::before {
     opacity: 0;
   }
-  #work .work-items .work-item .view-site-btn:hover::after {
+  .work .work-items .work-item .view-site-btn:hover::after {
     opacity: 1;
   }
 }
 @media (max-width: 820px) {
-  #work .work-items .work-item .view-site-btn:active {
+  .work .work-items .work-item .view-site-btn:active {
     transform: scale(0.95);
     letter-spacing: normal;
   }
-  #work .work-items .work-item .view-site-btn:active::before {
+  .work .work-items .work-item .view-site-btn:active::before {
     opacity: 0;
   }
-  #work .work-items .work-item .view-site-btn:active::after {
+  .work .work-items .work-item .view-site-btn:active::after {
     opacity: 1;
   }
 }
-#work .work-items .work-item .view-repo-btn {
+.work .work-items .work-item .view-repo-btn {
   display: block;
   margin: 0 auto;
   padding: 0.55rem 0;
@@ -2655,7 +2650,7 @@ hamburger
   position: relative;
   isolation: isolate;
 }
-#work .work-items .work-item .view-repo-btn::before, #work .work-items .work-item .view-repo-btn::after {
+.work .work-items .work-item .view-repo-btn::before, .work .work-items .work-item .view-repo-btn::after {
   position: absolute;
   content: "";
   top: 0;
@@ -2666,47 +2661,47 @@ hamburger
   transition: 0.2s;
   z-index: -1;
 }
-#work .work-items .work-item .view-repo-btn::before {
+.work .work-items .work-item .view-repo-btn::before {
   background: linear-gradient(0deg, #eee, #ffff);
   border: 0.05rem solid #b60f30;
 }
-#work .work-items .work-item .view-repo-btn::after {
+.work .work-items .work-item .view-repo-btn::after {
   background: linear-gradient(0deg, #fff, #eee);
   opacity: 0;
 }
 @media (min-width: 820px) {
-  #work .work-items .work-item .view-repo-btn {
+  .work .work-items .work-item .view-repo-btn {
     width: 13rem;
   }
-  #work .work-items .work-item .view-repo-btn:hover {
+  .work .work-items .work-item .view-repo-btn:hover {
     transform: scale(0.95);
     letter-spacing: normal;
     text-decoration: none;
   }
-  #work .work-items .work-item .view-repo-btn:hover::before {
+  .work .work-items .work-item .view-repo-btn:hover::before {
     opacity: 0;
   }
-  #work .work-items .work-item .view-repo-btn:hover::after {
+  .work .work-items .work-item .view-repo-btn:hover::after {
     opacity: 1;
   }
 }
 @media (max-width: 820px) {
-  #work .work-items .work-item .view-repo-btn:active {
+  .work .work-items .work-item .view-repo-btn:active {
     transform: scale(0.95);
     letter-spacing: normal;
     text-decoration: none;
   }
-  #work .work-items .work-item .view-repo-btn:active::before {
+  .work .work-items .work-item .view-repo-btn:active::before {
     opacity: 0;
   }
-  #work .work-items .work-item .view-repo-btn:active::after {
+  .work .work-items .work-item .view-repo-btn:active::after {
     opacity: 1;
   }
 }
-#work .work-items .work-item p {
+.work .work-items .work-item p {
   text-align: center;
 }
-#work .work-items .work-item:hover figure img {
+.work .work-items .work-item:hover figure img {
   transform: scale(1.05);
 }
 
