--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ hamburger
   box-shadow: inset 1px 1px 2px rgba(222, 222, 222, 0.3), inset -2px -2px 2px rgba(0, 0, 0, 0.45);
 }
 #header .hamburger.hamburger:before {
-  border: 1px solid #ead2a1;
+  border: 1px solid #fafafa;
   opacity: 0;
   animation: ham-pulse 2.5s ease infinite;
 }
@@ -101,11 +101,11 @@ hamburger
   height: 0.3em;
 }
 #header .hamburger.active .bar::before {
-  background-color: #ead2a1;
+  background-color: #fafafa;
   transform: translateY(0) skewY(40deg);
 }
 #header .hamburger.active .bar::after {
-  background-color: #ead2a1;
+  background-color: #fafafa;
   transform: translateY(0) skewY(-40deg) skewX(0);
 }
 
@@ -128,7 +128,7 @@ hamburger
 /* The progress bar (scroll indicator) */
 .progress-bar {
   height: 3px;
-  background: #ead2a1;
+  background: #fafafa;
   opacity: 0.1;
   width: 0%;
   transition: 0.5s;
@@ -351,12 +351,12 @@ hamburger
   font-size: 1rem;
   font-size: 100%;
   font-weight: 700;
-  color: #ead2a1;
+  color: #fff7;
 }
 .bottom-nav .link-item a {
+  color: #f4f4f4;
   font-size: 0.85rem;
   text-transform: capitalize;
-  color: #fff7;
   display: grid;
   place-items: center;
 }
@@ -438,7 +438,7 @@ hamburger
   animation-timing-function: ease-in-out;
 }
 .loader_bg .spinner .sector.sector-2 {
-  border-right-color: #ead2a1;
+  border-right-color: #fafafa;
   animation-duration: 2s;
   animation-timing-function: ease-in;
 }
@@ -456,7 +456,7 @@ hamburger
   }
 }
 .loader_bg .loader {
-  border: 1rem solid #ead2a1;
+  border: 1rem solid #fafafa;
   border: none;
   height: 3.5rem;
   width: 3.5rem;
@@ -470,7 +470,7 @@ hamburger
   left: 0;
   width: 100%;
   height: 100%;
-  border: 0.25rem solid #ead2a1;
+  border: 0.25rem solid #fafafa;
   border-radius: 50%;
   opacity: 0;
   animation: loader 2s linear infinite;
@@ -493,7 +493,7 @@ hamburger
 }
 .loader_bg p {
   position: absolute;
-  color: #ead2a1;
+  color: #fafafa;
   bottom: 0vh;
   left: 50%;
   transform: translateX(-50%) translateY(20vh);
@@ -578,10 +578,11 @@ hamburger
   font-family: "Kanit", sans-serif;
   font-weight: 400;
   text-transform: capitalize;
+  color: #fafafa;
   color: #f4f4f4;
-  color: #ead2a1;
   background-color: #20262e;
-  border: 1px solid #ead2a1;
+  border: 1px solid #fafafa;
+  border: 1px solid #f4f4f4;
   padding-left: 0.2rem;
   border-radius: 0.25rem;
   overflow: hidden;
@@ -595,9 +596,9 @@ hamburger
 #header .header #navbar .brand h1 span {
   margin-left: 0.2rem;
   padding: 0 0.2rem 0 0.2rem;
-  background: #ead2a1;
-  background: linear-gradient(0deg, #deb86e, #ead2a1);
+  background: #f4f4f4;
   color: #29323c;
+  font-weight: 600;
   border-radius: 0;
   transition: 0.2s;
 }
@@ -645,11 +646,8 @@ hamburger
     padding: 0;
     width: 100%;
     display: block;
-    font-size: 1.05rem;
-    font-weight: 400;
-    letter-spacing: 0.05rem;
+    font-weight: 500;
     font-family: "Montserrat", sans-serif;
-    font-family: "Kanit", sans-serif;
     text-transform: capitalize;
   }
   #header .header #navbar .nav-list .links-container ul li i {
@@ -657,7 +655,6 @@ hamburger
     text-align: center;
     padding: 0.5rem;
     color: #fffa;
-    border: 1px solid #ead2a1;
   }
   #header .header #navbar .nav-list .links-container .contact-links {
     background: #29323c;
@@ -671,9 +668,8 @@ hamburger
   #header .header #navbar .nav-list .links-container .contact-links a {
     opacity: 0;
     transform: translateY(1rem);
-    color: #ead2a1;
+    color: #f4f4f4;
     font-size: 1rem;
-    letter-spacing: 0.1rem;
     margin-bottom: 0.5rem;
     transition: 0.5s;
   }
@@ -697,7 +693,6 @@ hamburger
   }
   #header .header #navbar .nav-list .links-container.active ul li i {
     transition: 1s ease 0.8s;
-    color: #ead2a1;
   }
   #header .header #navbar .nav-list .links-container.active ul li:nth-child(1) {
     transition-delay: 0.3s;
@@ -768,13 +763,12 @@ hamburger
   list-style: none;
   display: flex;
   align-items: center;
+  padding: 0.25rem;
 }
 #header .header #navbar .nav-list ul li:hover {
   opacity: 1;
 }
 #header .header #navbar .nav-list ul li a {
-  font-weight: 400;
-  letter-spacing: 0.15em;
   text-decoration: none;
   color: #f4f4f4;
   text-transform: capitalize;
@@ -801,7 +795,7 @@ hamburger
   text-align: left;
   color: #fffa;
   border-radius: 5px;
-  border: 1px solid #ead2a1;
+  border: 1px solid #f4f4f4;
 }
 #header .header #navbar .nav-list ul li:hover {
   transition: 0.3s;
@@ -879,23 +873,23 @@ hamburger
   }
   #header .header #navbar .nav-list ul li:hover i {
     transition: 0.3s;
-    color: #ead2a1;
+    color: #fafafa;
   }
   #header .header #navbar .nav-list ul li:focus::before {
     width: 30%;
     opacity: 1;
   }
   #header .header #navbar .nav-list ul li:focus a {
-    color: #ead2a1;
+    color: #fafafa;
   }
   #header .header #navbar .nav-list ul li:focus i {
-    color: #ead2a1;
+    color: #fafafa;
   }
   #header .header #navbar .nav-list ul li.active a {
-    color: #ead2a1;
+    color: #fafafa;
   }
   #header .header #navbar .nav-list ul li.active i {
-    color: #ead2a1;
+    color: #fafafa;
   }
   #header .header #navbar .nav-list ul.active {
     background: none;
@@ -925,7 +919,7 @@ hamburger
   }
   #header .header #navbar .nav-list .contact-links a:hover i {
     transform: translateX(0);
-    color: #ead2a1;
+    color: #fafafa;
   }
 }
 
@@ -1212,7 +1206,7 @@ hamburger
   text-align: left;
 }
 #home .hero .slogan p a {
-  color: #ead2a1;
+  color: #fafafa;
   color: #fff9;
 }
 @media (min-width: 1024px) {
@@ -1334,7 +1328,7 @@ hamburger
   transition: 1s;
 }
 #menu .menu-section .menu-content .menu-cta .btn {
-  color: #ead2a1;
+  color: #fafafa;
   display: none;
 }
 #menu .menu-section .menu-content .menu-cta .page-btn {
@@ -1709,7 +1703,7 @@ hamburger
 }
 #skills .skills-top .skills-drop {
   text-align: left;
-  color: #ead2a1;
+  color: #fafafa;
 }
 @media (min-width: 820px) {
   #skills .skills-top .skills-drop {
@@ -1777,7 +1771,7 @@ hamburger
 #skills .dropdown .dropbtn.active {
   transform: scale(0.98);
   letter-spacing: normal;
-  color: #ead2a1;
+  color: #fafafa;
 }
 #skills .dropdown .dropbtn.active::before {
   opacity: 0;
@@ -1858,7 +1852,7 @@ hamburger
   color: #f4f4f4;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item ul li::marker {
-  color: #ead2a1;
+  color: #fafafa;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item::after {
   content: "";
@@ -1900,7 +1894,7 @@ hamburger
   width: 100%;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon i {
-  color: #ead2a1;
+  color: #fafafa;
   font-size: 3em;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::before {
@@ -1941,11 +1935,11 @@ hamburger
 #skills .dropdown .dropdown-content .skills-bottom .skills-item h2 {
   font-size: 1.5rem;
   font-weight: 400;
-  color: #ead2a1;
+  color: #fafafa;
   margin-bottom: 0.5rem;
   text-transform: capitalize;
   font-family: "Kanit", sans-serif;
-  text-decoration: underline #ead2a1;
+  text-decoration: underline #fafafa;
   text-underline-offset: 0.1em;
 }
 @media (min-width: 768px) {
@@ -2102,7 +2096,7 @@ hamburger
   border: none;
   background: #20262e;
   border-radius: 50%;
-  outline: 2px solid #ead2a1;
+  outline: 2px solid #fafafa;
   outline: 2px solid #fff4;
   position: relative;
   display: grid;
@@ -2315,7 +2309,7 @@ hamburger
 #projects .projects .all-projects .project-item .project-tile h1 {
   font-size: 1.25rem;
   width: 100%;
-  color: #ead2a1;
+  color: #fafafa;
   font-weight: 500;
   text-transform: capitalize;
   line-height: 1em;
@@ -2365,11 +2359,11 @@ hamburger
   outline: none;
   border-radius: 0.5rem;
   transition: all 0.3s ease;
-  border: 1px solid #ead2a1;
+  border: 1px solid #fafafa;
 }
 #projects .projects .all-projects .project-item .project-tile a i {
   transition: 0.2s;
-  color: #ead2a1;
+  color: #fafafa;
   font-size: 0.8rem;
   padding: 0.5rem 0;
 }
@@ -2391,7 +2385,7 @@ hamburger
   transition: 0.3s ease;
 }
 #projects .projects .all-projects .project-item .project-tile a:hover h2 {
-  color: #ead2a1;
+  color: #fafafa;
 }
 #projects .projects .all-projects .project-item .project-tile a:hover i {
   color: #f4f4f4;
@@ -2872,7 +2866,7 @@ hamburger
   font-size: 2.5em;
   float: left;
   background: #29323c;
-  color: #ead2a1;
+  color: #fafafa;
   padding: 0 0.1em;
   margin-right: 0.1em;
   border-radius: 0.25rem;
@@ -2891,7 +2885,7 @@ hamburger
   transform: translateY(2rem);
 }
 .about .col-right .article-container article p.io-item i {
-  color: #ead2a1;
+  color: #fafafa;
 }
 .about .col-right .article-container article p.active-item {
   opacity: 1;
@@ -2906,7 +2900,7 @@ hamburger
   display: flex;
   justify-content: space-around;
   background: linear-gradient(0deg, #20262e, #485563);
-  color: #ead2a1;
+  color: #fafafa;
   margin: 0 auto;
   padding: 1rem;
   box-shadow: inset 3px 0px 3px rgba(255, 255, 255, 0.3), inset -3px -3px 3px rgba(0, 0, 0, 0.3);
@@ -2922,7 +2916,7 @@ hamburger
 .about .col-right .article-container article#cv a {
   font-size: 0.85rem;
   transition: 0.3s ease;
-  color: #ead2a1;
+  color: #fafafa;
   text-shadow: 1px 1px 1px #000;
   display: flex;
   flex-direction: column;
@@ -2930,7 +2924,7 @@ hamburger
   position: relative;
 }
 .about .col-right .article-container article#cv a i {
-  background-image: linear-gradient(60deg, #ead2a1 30%, rgba(209, 207, 207, 0.829) 60%, #fff 60%);
+  background-image: linear-gradient(60deg, #fafafa 30%, rgba(209, 207, 207, 0.829) 60%, #fff 60%);
   background-size: 300%;
   background-position: right;
   background-clip: text;
@@ -3125,12 +3119,12 @@ hamburger
   font-weight: 500;
   letter-spacing: 0.15em;
   background: #20262e;
-  outline: 2px solid #ead2a1;
-  color: #ead2a1;
+  outline: 2px solid #fafafa;
+  color: #fafafa;
   overflow: hidden;
 }
 #footer .footer form .input-div input:invalid, #footer .footer form .input-div textarea:invalid {
-  background-color: #ead2a1;
+  background-color: #fafafa;
   background-color: #ddd;
   color: #000;
   outline: none;
@@ -3234,11 +3228,11 @@ hamburger
   font-size: 1.25rem;
   margin-bottom: 0.25rem;
   text-transform: capitalize;
+  color: #ead2a1;
   color: #f4f4f4;
   font-weight: 300;
   text-align: center;
   font-family: "Kanit", sans-serif;
-  color: #ead2a1;
   transition: 1s ease;
 }
 #footer .footer .socialMedia-links .socialMedia-item a {
@@ -3670,7 +3664,7 @@ hamburger
   }
 }
 .bs21 a {
-  color: #ead2a1;
+  color: #fafafa;
 }
 .bs21 a:hover {
   opacity: 0.9;
