--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -107,10 +107,11 @@
                         font-size: 1.5rem;
                     }
                     text-transform: capitalize;
-                    color: #f4f4f4;
                     color: $span-gold;
+                    color: $text-light;
                     background-color: $overlay-blue-darker;
                     border: 1px solid $span-gold;
+                    border: 1px solid $text-light;
                     padding-left: .2rem;
                     border-radius: .25rem;
                     overflow: hidden;
@@ -121,9 +122,13 @@
                         margin-left: .2rem;
                         // padding: .05rem .3rem .05rem .05rem;
                         padding: 0 .2rem 0 .2rem;
-                        background: $span-gold;
-                        background: $button-gold;
+                        // background: $span-gold;
+                        // background: $button-gold;
+                        background: $text-light;
                         color: $overlay-blue-dark;
+                        font-weight: 600;
+                        // font-size: inherit;
+                        // color: inherit;
                         border-radius: 0;
                         // border-top-right-radius: .25rem;
                         // border-bottom-right-radius: .25rem;
@@ -163,17 +168,17 @@
                             outline: none;
                             overflow-y: auto;
                             overflow-x: hidden;
+
                             // list items active transition
                             li {
                                 transform: translateX(10%);
                                 opacity: 0;
-                                transition:.3s;
+                                transition: .3s;
                                 display: flex;
                                 justify-content: flex-start;
                                 align-items: center;
                                 margin: .5rem auto;
                                 width: 95%;
-
 
                                 a {
                                     // border: 1px solid yellow;
@@ -183,12 +188,12 @@
                                     padding: 0;
                                     width: 100%;
                                     display: block;
-                                    font-size: 1.05rem;
-                                    font-weight: 400;
-                                    letter-spacing: .05rem;
+                                    // font-size: 1.05rem;
+                                    font-weight: 500;
+                                    // letter-spacing: .05rem;
                                     // border-radius: 5px;
                                     font-family: $font-content;
-                                    font-family: $font-title;
+                                    // font-family: $font-title;
                                     text-transform: capitalize;
                                     // background-color: $overlay-blue-darker;
                                 }
@@ -199,8 +204,8 @@
                                     // margin-right: 1em;
                                     padding: .5rem;
                                     color: #fffa;
-                                    border: 1px solid $span-gold;
-                                    
+                                    // border: 1px solid $span-gold;
+
                                 }
                             }
                         }
@@ -219,9 +224,9 @@
                             a {
                                 opacity: 0;
                                 transform: translateY(1rem);
-                                color: $span-gold;
+                                color: $text-light;
                                 font-size: 1rem;
-                                letter-spacing: .1rem;
+                                // letter-spacing: .1rem;
                                 margin-bottom: .5rem;
                                 transition: .5s;
 
@@ -231,83 +236,88 @@
                                 }
                             }
                         }
+
                         // active mobile  navbar
-                    &.active {
-                        left: 0;
-                        z-index: 50;
-                        .nav-logo {
-                            transition: 1.5s;
-                            opacity: 1;
-                            transform: translateX(0);
+                        &.active {
+                            left: 0;
+                            z-index: 50;
 
-                        }
-
-                        ul {
-                            li {
-                                transition: .5s;
+                            .nav-logo {
+                                transition: 1.5s;
+                                opacity: 1;
                                 transform: translateX(0);
-                                opacity: 1;
 
-                                i {
-                                    transition: 1s ease .8s;
-                                    color: $span-gold;
-                                }
+                            }
 
-                                &:nth-child(1) {
-                                    transition-delay: .3s;
-                                }
+                            ul {
+                                li {
+                                    transition: .5s;
+                                    transform: translateX(0);
+                                    opacity: 1;
 
-                                &:nth-child(2) {
-                                    transition-delay: .4s;
-                                }
+                                    i {
+                                        transition: 1s ease .8s;
+                                        // color: $span-gold;
+                                    }
 
-                                &:nth-child(3) {
-                                    transition-delay: .5s;
-                                }
+                                    &:nth-child(1) {
+                                        transition-delay: .3s;
+                                    }
 
-                                &:nth-child(4) {
-                                    transition-delay: .6s;
-                                }
+                                    &:nth-child(2) {
+                                        transition-delay: .4s;
+                                    }
 
-                                &:nth-child(5) {
-                                    transition-delay: .7s;
-                                }
+                                    &:nth-child(3) {
+                                        transition-delay: .5s;
+                                    }
 
-                                &:nth-child(6) {
-                                    transition-delay: .8s;
-                                }
-                                &:nth-child(7) {
-                                    transition-delay: .9s;
-                                }
+                                    &:nth-child(4) {
+                                        transition-delay: .6s;
+                                    }
 
+                                    &:nth-child(5) {
+                                        transition-delay: .7s;
+                                    }
+
+                                    &:nth-child(6) {
+                                        transition-delay: .8s;
+                                    }
+
+                                    &:nth-child(7) {
+                                        transition-delay: .9s;
+                                    }
+
+                                }
+                            }
+
+                            .contact-links {
+                                a {
+                                    opacity: 1;
+                                    transform: translateY(0);
+
+                                    &:nth-child(1) {
+                                        transition-delay: 1s;
+                                    }
+
+                                    &:nth-child(2) {
+                                        transition-delay: 1.2s;
+                                    }
+
+                                    &:nth-child(3) {
+                                        transition-delay: 1.4s;
+                                    }
+
+                                    &:nth-child(4) {
+                                        transition-delay: 1.6s;
+                                    }
+                                }
                             }
                         }
 
-                        .contact-links {
-                            a {
-                                opacity: 1;
-                                transform: translateY(0);
-                                &:nth-child(1) {
-                                    transition-delay: 1s;
-                                }
-                                &:nth-child(2) {
-                                    transition-delay: 1.2s;
-                                }
-                                &:nth-child(3) {
-                                    transition-delay: 1.4s;
-                                }
-                                &:nth-child(4) {
-                                    transition-delay: 1.6s;
-                                }
-                            }
-                        }
+                        // end of active mobile  navbar
                     }
-                    // end of active mobile  navbar
-                    }
-                    
 
-                    
-                    
                     // nav-logo 
                     .nav-logo {
                         margin: .5rem 5vw 1rem;
@@ -324,18 +334,18 @@
                         overflow: hidden;
                         border: 2px solid $border;
                         background: $overlay-blue-dark;
-                    
+
                         img {
                             width: 100%;
                             height: auto;
                         }
+
                         @media (min-width: 768px) {
                             width: 20%;
                         }
                     }
 
                 }
-                // DESKTOP UL
                 ul {
                     // border: 2px solid red;
                     transition: .5s;
@@ -343,19 +353,17 @@
                         list-style: none;
                         display: flex;
                         align-items: center;
-                        // border: 1px solid red;
+                        // border-bottom: 1px solid #fff7;
+                        padding: .25rem;
                         // opacity: .8;
                         &:hover {
                             opacity: 1;
                         }
 
                         a {
-                            font-weight: 400;
-                            letter-spacing: .15em;
                             text-decoration: none;
                             color: $text-light;
                             text-transform: capitalize;
-                            // padding: 1em;
                             display: block;
                             text-align: left;
                             font-family: $font-content;
@@ -382,7 +390,7 @@
                             text-align: left;
                             color: $text-white-trans;
                             border-radius: 5px;
-                            border: 1px solid $span-gold;
+                            border: 1px solid $text-light;
                             // box-shadow: $box-light-top-sm;
                         }
                         // li hover state
