--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,8 @@ hamburger
   outline: none;
   transition: 0.25s ease;
 }
-#header .hamburger.hamburger::after {
-  opacity: 0.8;
-  box-shadow: inset 1px 1px 2px rgba(222, 222, 222, 0.3), inset -2px -2px 2px rgba(0, 0, 0, 0.45);
-}
 #header .hamburger.hamburger:before {
-  border: 1px solid #fafafa;
+  border: 1px solid #ead2a1;
   opacity: 0;
   animation: ham-pulse 2.5s ease infinite;
 }
@@ -48,7 +44,7 @@ hamburger
   }
   100% {
     opacity: 0;
-    transform: scale(1.3);
+    transform: scale(1.25);
   }
 }
 #header .hamburger.no-pulse.hamburger::before {
@@ -101,11 +97,11 @@ hamburger
   height: 0.3em;
 }
 #header .hamburger.active .bar::before {
-  background-color: #fafafa;
+  background-color: #ead2a1;
   transform: translateY(0) skewY(40deg);
 }
 #header .hamburger.active .bar::after {
-  background-color: #fafafa;
+  background-color: #ead2a1;
   transform: translateY(0) skewY(-40deg) skewX(0);
 }
 
@@ -128,7 +124,7 @@ hamburger
 /* The progress bar (scroll indicator) */
 .progress-bar {
   height: 3px;
-  background: #fafafa;
+  background: #ead2a1;
   opacity: 0.1;
   width: 0%;
   transition: 0.5s;
@@ -438,7 +434,7 @@ hamburger
   animation-timing-function: ease-in-out;
 }
 .loader_bg .spinner .sector.sector-2 {
-  border-right-color: #fafafa;
+  border-right-color: #ead2a1;
   animation-duration: 2s;
   animation-timing-function: ease-in;
 }
@@ -456,7 +452,7 @@ hamburger
   }
 }
 .loader_bg .loader {
-  border: 1rem solid #fafafa;
+  border: 1rem solid #ead2a1;
   border: none;
   height: 3.5rem;
   width: 3.5rem;
@@ -470,7 +466,7 @@ hamburger
   left: 0;
   width: 100%;
   height: 100%;
-  border: 0.25rem solid #fafafa;
+  border: 0.25rem solid #ead2a1;
   border-radius: 50%;
   opacity: 0;
   animation: loader 2s linear infinite;
@@ -493,7 +489,7 @@ hamburger
 }
 .loader_bg p {
   position: absolute;
-  color: #fafafa;
+  color: #ead2a1;
   bottom: 0vh;
   left: 50%;
   transform: translateX(-50%) translateY(20vh);
@@ -578,11 +574,11 @@ hamburger
   font-family: "Kanit", sans-serif;
   font-weight: 400;
   text-transform: capitalize;
-  color: #fafafa;
   color: #f4f4f4;
+  color: #ead2a1;
   background-color: #20262e;
-  border: 1px solid #fafafa;
   border: 1px solid #f4f4f4;
+  border: 1px solid #ead2a1;
   padding-left: 0.2rem;
   border-radius: 0.25rem;
   overflow: hidden;
@@ -596,9 +592,8 @@ hamburger
 #header .header #navbar .brand h1 span {
   margin-left: 0.2rem;
   padding: 0 0.2rem 0 0.2rem;
-  background: #f4f4f4;
+  background: linear-gradient(0deg, #deb86e, #ead2a1);
   color: #29323c;
-  font-weight: 600;
   border-radius: 0;
   transition: 0.2s;
 }
@@ -637,7 +632,7 @@ hamburger
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin: 0.5rem auto;
+    margin: 0 auto 0.25rem;
     width: 95%;
   }
   #header .header #navbar .nav-list .links-container ul li a {
@@ -654,7 +649,7 @@ hamburger
     width: 2.5rem;
     text-align: center;
     padding: 0.5rem;
-    color: #fffa;
+    color: #f4f4f4;
   }
   #header .header #navbar .nav-list .links-container .contact-links {
     background: #29323c;
@@ -674,7 +669,7 @@ hamburger
     transition: 0.5s;
   }
   #header .header #navbar .nav-list .links-container .contact-links a i {
-    color: #fff;
+    color: #ead2a1;
     width: 1.5rem;
   }
   #header .header #navbar .nav-list .links-container.active {
@@ -765,9 +760,6 @@ hamburger
   align-items: center;
   padding: 0.25rem;
 }
-#header .header #navbar .nav-list ul li:hover {
-  opacity: 1;
-}
 #header .header #navbar .nav-list ul li a {
   text-decoration: none;
   color: #f4f4f4;
@@ -793,9 +785,8 @@ hamburger
   margin-right: 0.5em;
   padding: 0;
   text-align: left;
-  color: #fffa;
   border-radius: 5px;
-  border: 1px solid #f4f4f4;
+  background: #20262e;
 }
 #header .header #navbar .nav-list ul li:hover {
   transition: 0.3s;
@@ -873,23 +864,23 @@ hamburger
   }
   #header .header #navbar .nav-list ul li:hover i {
     transition: 0.3s;
-    color: #fafafa;
+    color: #ead2a1;
   }
   #header .header #navbar .nav-list ul li:focus::before {
     width: 30%;
     opacity: 1;
   }
   #header .header #navbar .nav-list ul li:focus a {
-    color: #fafafa;
+    color: #ead2a1;
   }
   #header .header #navbar .nav-list ul li:focus i {
-    color: #fafafa;
+    color: #ead2a1;
   }
   #header .header #navbar .nav-list ul li.active a {
-    color: #fafafa;
+    color: #ead2a1;
   }
   #header .header #navbar .nav-list ul li.active i {
-    color: #fafafa;
+    color: #ead2a1;
   }
   #header .header #navbar .nav-list ul.active {
     background: none;
@@ -919,7 +910,7 @@ hamburger
   }
   #header .header #navbar .nav-list .contact-links a:hover i {
     transform: translateX(0);
-    color: #fafafa;
+    color: #ead2a1;
   }
 }
 
@@ -1206,7 +1197,7 @@ hamburger
   text-align: left;
 }
 #home .hero .slogan p a {
-  color: #fafafa;
+  color: #ead2a1;
   color: #fff9;
 }
 @media (min-width: 1024px) {
@@ -1328,7 +1319,7 @@ hamburger
   transition: 1s;
 }
 #menu .menu-section .menu-content .menu-cta .btn {
-  color: #fafafa;
+  color: #ead2a1;
   display: none;
 }
 #menu .menu-section .menu-content .menu-cta .page-btn {
@@ -1703,7 +1694,7 @@ hamburger
 }
 #skills .skills-top .skills-drop {
   text-align: left;
-  color: #fafafa;
+  color: #ead2a1;
 }
 @media (min-width: 820px) {
   #skills .skills-top .skills-drop {
@@ -1771,7 +1762,7 @@ hamburger
 #skills .dropdown .dropbtn.active {
   transform: scale(0.98);
   letter-spacing: normal;
-  color: #fafafa;
+  color: #ead2a1;
 }
 #skills .dropdown .dropbtn.active::before {
   opacity: 0;
@@ -1852,7 +1843,7 @@ hamburger
   color: #f4f4f4;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item ul li::marker {
-  color: #fafafa;
+  color: #ead2a1;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item::after {
   content: "";
@@ -1894,7 +1885,7 @@ hamburger
   width: 100%;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon i {
-  color: #fafafa;
+  color: #ead2a1;
   font-size: 3em;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::before {
@@ -1935,11 +1926,11 @@ hamburger
 #skills .dropdown .dropdown-content .skills-bottom .skills-item h2 {
   font-size: 1.5rem;
   font-weight: 400;
-  color: #fafafa;
+  color: #ead2a1;
   margin-bottom: 0.5rem;
   text-transform: capitalize;
   font-family: "Kanit", sans-serif;
-  text-decoration: underline #fafafa;
+  text-decoration: underline #ead2a1;
   text-underline-offset: 0.1em;
 }
 @media (min-width: 768px) {
@@ -2096,7 +2087,7 @@ hamburger
   border: none;
   background: #20262e;
   border-radius: 50%;
-  outline: 2px solid #fafafa;
+  outline: 2px solid #ead2a1;
   outline: 2px solid #fff4;
   position: relative;
   display: grid;
@@ -2309,7 +2300,7 @@ hamburger
 #projects .projects .all-projects .project-item .project-tile h1 {
   font-size: 1.25rem;
   width: 100%;
-  color: #fafafa;
+  color: #ead2a1;
   font-weight: 500;
   text-transform: capitalize;
   line-height: 1em;
@@ -2359,11 +2350,11 @@ hamburger
   outline: none;
   border-radius: 0.5rem;
   transition: all 0.3s ease;
-  border: 1px solid #fafafa;
+  border: 1px solid #ead2a1;
 }
 #projects .projects .all-projects .project-item .project-tile a i {
   transition: 0.2s;
-  color: #fafafa;
+  color: #ead2a1;
   font-size: 0.8rem;
   padding: 0.5rem 0;
 }
@@ -2385,7 +2376,7 @@ hamburger
   transition: 0.3s ease;
 }
 #projects .projects .all-projects .project-item .project-tile a:hover h2 {
-  color: #fafafa;
+  color: #ead2a1;
 }
 #projects .projects .all-projects .project-item .project-tile a:hover i {
   color: #f4f4f4;
@@ -2866,7 +2857,7 @@ hamburger
   font-size: 2.5em;
   float: left;
   background: #29323c;
-  color: #fafafa;
+  color: #ead2a1;
   padding: 0 0.1em;
   margin-right: 0.1em;
   border-radius: 0.25rem;
@@ -2885,7 +2876,7 @@ hamburger
   transform: translateY(2rem);
 }
 .about .col-right .article-container article p.io-item i {
-  color: #fafafa;
+  color: #ead2a1;
 }
 .about .col-right .article-container article p.active-item {
   opacity: 1;
@@ -2900,7 +2891,7 @@ hamburger
   display: flex;
   justify-content: space-around;
   background: linear-gradient(0deg, #20262e, #485563);
-  color: #fafafa;
+  color: #ead2a1;
   margin: 0 auto;
   padding: 1rem;
   box-shadow: inset 3px 0px 3px rgba(255, 255, 255, 0.3), inset -3px -3px 3px rgba(0, 0, 0, 0.3);
@@ -2916,7 +2907,7 @@ hamburger
 .about .col-right .article-container article#cv a {
   font-size: 0.85rem;
   transition: 0.3s ease;
-  color: #fafafa;
+  color: #ead2a1;
   text-shadow: 1px 1px 1px #000;
   display: flex;
   flex-direction: column;
@@ -2924,7 +2915,7 @@ hamburger
   position: relative;
 }
 .about .col-right .article-container article#cv a i {
-  background-image: linear-gradient(60deg, #fafafa 30%, rgba(209, 207, 207, 0.829) 60%, #fff 60%);
+  background-image: linear-gradient(60deg, #ead2a1 30%, rgba(209, 207, 207, 0.829) 60%, #fff 60%);
   background-size: 300%;
   background-position: right;
   background-clip: text;
@@ -3119,12 +3110,12 @@ hamburger
   font-weight: 500;
   letter-spacing: 0.15em;
   background: #20262e;
-  outline: 2px solid #fafafa;
-  color: #fafafa;
+  outline: 2px solid #ead2a1;
+  color: #ead2a1;
   overflow: hidden;
 }
 #footer .footer form .input-div input:invalid, #footer .footer form .input-div textarea:invalid {
-  background-color: #fafafa;
+  background-color: #ead2a1;
   background-color: #ddd;
   color: #000;
   outline: none;
@@ -3664,7 +3655,7 @@ hamburger
   }
 }
 .bs21 a {
-  color: #fafafa;
+  color: #ead2a1;
 }
 .bs21 a:hover {
   opacity: 0.9;
