--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -37,11 +37,11 @@ hamburger
         transition: .25s ease;
     }
     // hamburger box shadow
-    &.hamburger::after {
-        opacity: .8;
-        box-shadow: inset 1px 1px 2px hsla(0, 0%, 87%, 0.300),
-                    inset -2px -2px 2px rgba(0, 0, 0, 0.450);
-    }
+    // &.hamburger::after {
+    //     opacity: .8;
+    //     box-shadow: inset 1px 1px 2px hsla(0, 0%, 87%, 0.300),
+    //                 inset -2px -2px 2px rgba(0, 0, 0, 0.450);
+    // }
     // end of hamburger box shadow
     // pulse 
     &.hamburger:before {
@@ -55,7 +55,7 @@ hamburger
 
             100% {
                 opacity: 0;
-                transform: scale(1.3);
+                transform: scale(1.25);
                 // border-color: #fff;
             }
         }
